@@ -24,7 +24,6 @@ import projet.projetstage02.service.StudentService;
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -56,22 +55,24 @@ public class RootControllerTest {
     @Mock
     GestionnaireService gestionnaireService;
 
-    JacksonTester<StudentDTO> jsonStudentDTO;
+    JacksonTester<StudentInDTO> jsonStudentDTO;
     JacksonTester<LoginDTO> jsonLoginDTO;
     JacksonTester<CompanyDTO> jsonCompanyDTO;
     JacksonTester<GestionnaireDTO> jsonGestionnaireDTO;
-    JacksonTester<OffreDTO> jsonOffreDTO;
+    JacksonTester<OffreInDTO> jsonOffreDTO;
     JacksonTester<TokenDTO> jsonTokenDTO;
     JacksonTester<CvRefusalDTO> jsonCvRefusalDTO;
     JacksonTester<PdfDTO> jsonPdfDTO;
     JacksonTester<SignatureInDTO> jsonSignatureDTO;
 
-    StudentDTO bart;
+    StudentInDTO bart;
+    StudentOutDTO bartOut;
     CompanyDTO duffBeer;
     TokenDTO token;
     LoginDTO login;
     GestionnaireDTO burns;
-    OffreDTO duffOffre;
+    OffreInDTO duffOffre;
+    OffreOutDTO duffOffreOut;
     PdfOutDTO duffOfferOut;
     PdfDTO bartCV;
     CvRefusalDTO cvRefusalDTO;
@@ -82,17 +83,25 @@ public class RootControllerTest {
     StageContractInDTO stageContractInDTO;
     StageContractOutDTO stageContractOutDTO;
     SignatureInDTO signatureInDTO;
-    UnvalidatedAcceptationsDTO acceptationsDTO;
+    ContractsDTO contractsDTO;
     OfferApplicationDTO offerApplicationDTO;
 
     CvStatusDTO cvStatusDTO;
 
-    List<StageContractOutDTO> contracts;
 
     // https://thepracticaldeveloper.com/guide-spring-boot-controller-tests/
     @BeforeEach
     void setup() {
-        bart = StudentDTO.builder()
+        bart = StudentInDTO.builder()
+                .firstName("Bart")
+                .lastName("Simpson")
+                .email("bart.simpson@springfield.com")
+                .department(Department.Transport.departement)
+                .password("eatMyShorts")
+                .isConfirmed(false)
+                .inscriptionTimestamp(Timestamp.valueOf(LocalDateTime.now()).getTime())
+                .build();
+        bartOut = StudentOutDTO.builder()
                 .firstName("Bart")
                 .lastName("Simpson")
                 .email("bart.simpson@springfield.com")
@@ -121,7 +130,7 @@ public class RootControllerTest {
                 .password("excellent")
                 .build();
 
-        duffOffre = OffreDTO.builder()
+        duffOffre = OffreInDTO.builder()
                 .nomDeCompagnie("Duff Beer")
                 .department(Department.Transport.departement)
                 .position("Delivery Guy")
@@ -130,6 +139,16 @@ public class RootControllerTest {
                 .session("Hiver 2022")
                 .adresse("654 Duff Street")
                 .pdf(new byte[0])
+                .build();
+        duffOffreOut = OffreOutDTO.builder()
+                .nomDeCompagnie("Duff Beer")
+                .department(Department.Transport.departement)
+                .position("Delivery Guy")
+                .heureParSemaine(40)
+                .salaire(40)
+                .session("Hiver 2022")
+                .adresse("654 Duff Street")
+                .pdf(byteToString(new byte[0]))
                 .build();
 
         token = TokenDTO.builder()
@@ -154,7 +173,7 @@ public class RootControllerTest {
 
         bartApplys = ApplicationListDTO.builder()
                 .studentId(bart.getId())
-                .offersId(Arrays.asList(duffOffre.getId()))
+                .offersId(List.of(duffOffre.getId()))
                 .build();
 
         cvRefusalDTO = CvRefusalDTO.builder()
@@ -177,6 +196,17 @@ public class RootControllerTest {
                 }})
                 .build();
 
+        offerApplicationDTO = OfferApplicationDTO.builder().applicants(List.of(
+                StudentOutDTO.builder().build(),
+                StudentOutDTO.builder().build(),
+                StudentOutDTO.builder().build()
+        )).build();
+
+        cvStatusDTO = CvStatusDTO.builder()
+                .status("ACCEPTED")
+                .refusalMessage("")
+                .build();
+
         stageContractInDTO = StageContractInDTO.builder()
                 .studentId(7L)
                 .offerId(8L)
@@ -196,35 +226,10 @@ public class RootControllerTest {
                 .companyId(6L)
                 .description("description")
                 .companySignature(signatureInDTO.getSignature())
-                .studentSignature(signatureInDTO.getSignature())
                 .build();
 
-        acceptationsDTO = new UnvalidatedAcceptationsDTO();
-        acceptationsDTO.add(UnvalidatedAcceptationDTO.builder()
-                .employFullName("Bob Marley")
-                .companyName("Bell")
-                .studentId(1L)
-                .studentFullName("Samir Badi")
-                .offerId(2L)
-                .position("Smoking weed")
-                .build()
-        );
-        offerApplicationDTO = OfferApplicationDTO.builder().applicants(List.of(
-                StudentDTO.builder().build(),
-                StudentDTO.builder().build(),
-                StudentDTO.builder().build()
-        )).build();
-
-        cvStatusDTO = CvStatusDTO.builder()
-                .status("ACCEPTED")
-                .refusalMessage("")
-                .build();
-
-        contracts = new ArrayList<>(){{
-            add(stageContractOutDTO);
-            add(stageContractOutDTO);
-            add(stageContractOutDTO);
-        }};
+        contractsDTO = new ContractsDTO();
+        contractsDTO.add(stageContractOutDTO);
     }
 
     @Test
@@ -253,7 +258,7 @@ public class RootControllerTest {
     void testCreateStudentBadRequest() throws Exception {
         mockMvc.perform(post("/createStudent")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonStudentDTO.write(new StudentDTO()).getJson()))
+                        .content(jsonStudentDTO.write(new StudentInDTO()).getJson()))
 
                 .andExpect(status().isBadRequest());
     }
@@ -403,7 +408,7 @@ public class RootControllerTest {
     void testCreateOffreBadRequest() throws Exception {
         mockMvc.perform(post("/createOffre")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonOffreDTO.write(new OffreDTO()).getJson()))
+                        .content(jsonOffreDTO.write(new OffreInDTO()).getJson()))
 
                 .andExpect(status().isBadRequest());
     }
@@ -421,8 +426,8 @@ public class RootControllerTest {
 
     @Test
     void testConfirmStudentEmailHappyDay() throws Exception {
-        when(studentService.getStudentById(1L)).thenReturn(bart);
-        when(studentService.saveStudent(bart)).thenReturn(1L);
+        when(studentService.getStudentById(1L)).thenReturn(bartOut);
+        when(studentService.saveStudent(any())).thenReturn(1L);
 
         mockMvc.perform(
                         put("/confirmEmail/student/{id}", 1))
@@ -442,8 +447,8 @@ public class RootControllerTest {
 
     @Test
     void testConfirmStudentEmailExpired() throws Exception {
-        bart.setInscriptionTimestamp(Timestamp.valueOf(LocalDateTime.now().minusMonths(1)).getTime());
-        when(studentService.getStudentById(1L)).thenReturn(bart);
+        bartOut.setInscriptionTimestamp(Timestamp.valueOf(LocalDateTime.now().minusMonths(1)).getTime());
+        when(studentService.getStudentById(1L)).thenReturn(bartOut);
 
         mockMvc.perform(
                         put("/confirmEmail/student/{id}", 1))
@@ -531,9 +536,9 @@ public class RootControllerTest {
 
     @Test
     void testLoginStudentHappyDay() throws Exception {
-        bart.setEmailConfirmed(true);
+        bartOut.setEmailConfirmed(true);
         when(authService.getToken(token.getToken(), STUDENT)).thenReturn(Token.builder().userId(1L).build());
-        when(studentService.getStudentById(1L)).thenReturn(bart);
+        when(studentService.getStudentById(1L)).thenReturn(bartOut);
 
         mockMvc.perform(put("/student")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -685,7 +690,7 @@ public class RootControllerTest {
     void testUnvalidatedStudentsHappyDay() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
         when(gestionnaireService.getUnvalidatedStudents())
-                .thenReturn(List.of(bart));
+                .thenReturn(List.of(bartOut));
 
         mockMvc.perform(put("/unvalidatedStudents")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -871,7 +876,7 @@ public class RootControllerTest {
     void testUnvalidatedOffers() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
         when(gestionnaireService.getUnvalidatedOffers())
-                .thenReturn(List.of(duffOffre));
+                .thenReturn(List.of(duffOffreOut));
 
         mockMvc.perform(put("/unvalidatedOffers")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -904,7 +909,7 @@ public class RootControllerTest {
     void testValidatedOffersHappyDay() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
         when(gestionnaireService.getValidatedOffers(anyInt()))
-                .thenReturn(List.of(duffOffre));
+                .thenReturn(List.of(duffOffreOut));
 
         mockMvc.perform(put("/validatedOffers/2022")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -915,8 +920,8 @@ public class RootControllerTest {
 
     @Test
     void testValidateOfferSuccess() throws Exception {
-        duffOffre.setValide(true);
-        when(gestionnaireService.validateOfferById(anyLong())).thenReturn(duffOffre);
+        duffOffreOut.setValide(true);
+        when(gestionnaireService.validateOfferById(anyLong())).thenReturn(duffOffreOut);
 
         mockMvc.perform(put("/validateOffer/{id}", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -986,8 +991,8 @@ public class RootControllerTest {
     @Test
     void testUploadCurriculumVitaeSuccess() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        bart.setCvToValidate(bartCV.getPdf());
-        when(studentService.uploadCurriculumVitae(any())).thenReturn(bart);
+        bartOut.setCvToValidate(byteToString(bartCV.getPdf()));
+        when(studentService.uploadCurriculumVitae(any())).thenReturn(bartOut);
 
         mockMvc.perform(put("/uploadStudentCV")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -995,7 +1000,7 @@ public class RootControllerTest {
 
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.firstName", is("Bart")))
-                .andExpect(jsonPath("$.cvToValidate", is("")));
+                .andExpect(jsonPath("$.cvToValidate", is("[]")));
     }
 
     @Test
@@ -1056,7 +1061,7 @@ public class RootControllerTest {
     @Test
     void testUnvalidatedCvStudents() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        when(gestionnaireService.getUnvalidatedCVStudents()).thenReturn(List.of(bart));
+        when(gestionnaireService.getUnvalidatedCVStudents()).thenReturn(List.of(bartOut));
 
         mockMvc.perform(put("/unvalidatedCvStudents", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -1112,7 +1117,7 @@ public class RootControllerTest {
 
     @Test
     void testValidateStudentCVSuccess() throws Exception {
-        when(gestionnaireService.validateStudentCV(anyLong())).thenReturn(bart);
+        when(gestionnaireService.validateStudentCV(anyLong())).thenReturn(bartOut);
 
         mockMvc.perform(put("/validateCv/{studentId}", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -1147,7 +1152,7 @@ public class RootControllerTest {
     @Test
     void testRefuseStudentCVSuccess() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        when(gestionnaireService.removeStudentCvValidation(anyLong(), anyString())).thenReturn(bart);
+        when(gestionnaireService.removeStudentCvValidation(anyLong(), anyString())).thenReturn(bartOut);
 
         mockMvc.perform(put("/refuseCv/{studentId}", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -1184,7 +1189,7 @@ public class RootControllerTest {
     @Test
     void testGetOffersByStudentDepartmentSuccess() throws Exception {
         when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        when(studentService.getOffersByStudentDepartment(anyLong())).thenReturn(List.of(duffOffre));
+        when(studentService.getOffersByStudentDepartment(anyLong())).thenReturn(List.of(duffOffreOut));
 
         mockMvc.perform(put("/getOffers/{studentId}", 1)
                         .contentType(MediaType.APPLICATION_JSON)
@@ -1403,6 +1408,125 @@ public class RootControllerTest {
     }
 
     @Test
+    void testGetApplicationsForOfferHappyDay() throws Exception {
+        when(companyService.getStudentsForOffer(anyLong())).thenReturn(offerApplicationDTO);
+
+        mockMvc.perform(put("/offer/{id}/applications", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.applicants.length()", is(3)));
+    }
+
+    @Test
+    void testGetApplicationsForOfferNotFound() throws Exception {
+        when(companyService.getStudentsForOffer(anyLong())).thenThrow(new NonExistentOfferExeption());
+
+        mockMvc.perform(put("/offer/{id}/applications", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testGetApplicationsForOfferForbidden() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
+
+        mockMvc.perform(put("/offer/{id}/applications", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void testGetStatusValidationCVHappyDay() throws Exception {
+        when(studentService.getStudentCvStatus(anyLong())).thenReturn(cvStatusDTO);
+
+        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status", is("ACCEPTED")));
+    }
+
+    @Test
+    void testGetStatusValidationCVForbidden() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
+
+        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void testGetStatusValidationCVNotFound() throws Exception {
+        when(studentService.getStudentCvStatus(anyLong())).thenThrow(new NonExistentEntityException());
+
+        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testGetCompanyOffersHappyDay() throws Exception {
+        when(companyService.getValidatedOffers(anyLong())).thenReturn(List.of(duffOffreOut));
+
+        mockMvc.perform(put("/company/validatedOffers/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()", is(1)));
+    }
+
+    @Test
+    void testGetCompanyOffersForbidden() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
+
+        mockMvc.perform(put("/company/validatedOffers/{id}", 1)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void testGetStudentCvToValidateCompanyHappyDay() throws Exception {
+        when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
+        PdfOutDTO cv = new PdfOutDTO(1L, "[96,17,69]");
+        when(companyService.getStudentCv(anyLong())).thenReturn(cv);
+
+        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(jsonPath("$.pdf", is("[96,17,69]")))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetStudentCvToValidateCompanyNotFound() throws Exception {
+        when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
+        doThrow(new NonExistentEntityException()).
+                when(companyService).getStudentCv(anyLong());
+
+        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testGetStudentCvToValidateCompanyInvalidToken() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
+
+        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+
+    @Test
     void testCreateStageContactHappyDay() throws Exception {
         when(gestionnaireService.createStageContract(any())).thenReturn(stageContractOutDTO);
 
@@ -1454,89 +1578,6 @@ public class RootControllerTest {
     }
 
     @Test
-    void testGetUnvalidatedAcceptationsHappyDay() throws Exception {
-        when(gestionnaireService.getUnvalidatedAcceptation()).thenReturn(acceptationsDTO);
-
-        mockMvc.perform(put("/unvalidatedAcceptations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.applications.size()", is(1)));
-    }
-
-    @Test
-    void testGetUnvalidatedAcceptationsInvalidToken() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/unvalidatedAcceptations")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void testGetCompanyContractsHappyDay() throws Exception {
-        when(companyService.getContracts(anyLong(), anyString())).thenReturn(contracts);
-
-        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()",is(3)));
-    }
-
-    @Test
-    void testGetCompanyContractsNotFound() throws Exception {
-        when(companyService.getContracts(anyLong(), anyString())).thenThrow(new NonExistentEntityException());
-
-        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testGetCompanyContractsTokenInvalid() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void testGetStudentContractsHappyDay() throws Exception {
-        when(studentService.getContracts(anyLong(), anyString())).thenReturn(contracts);
-
-        mockMvc.perform(put("/studentContracts/{studentId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()",is(3)));
-    }
-
-    @Test
-    void testGetStudentContractsNotFound() throws Exception {
-        when(studentService.getContracts(anyLong(), anyString())).thenThrow(new NonExistentEntityException());
-
-        mockMvc.perform(put("/studentContracts/{studentId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testGetStudentContractsTokenInvalid() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/studentContracts/{studentId}_{session}", 1, Offre.currentSession())
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
     void testCompanyContractSignatureHappyDay() throws Exception {
         when(companyService.addSignatureToContract(any())).thenReturn(stageContractOutDTO);
 
@@ -1578,160 +1619,54 @@ public class RootControllerTest {
     }
 
     @Test
-    void testStudentContractSignatureHappyDay() throws Exception {
-        when(studentService.addSignatureToContract(any())).thenReturn(stageContractOutDTO);
+    void testGetUnvalidatedAcceptationsHappyDay() throws Exception {
+        when(gestionnaireService.getContractsToCreate()).thenReturn(contractsDTO);
 
-        mockMvc.perform(put("/studentSignatureContract")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonSignatureDTO.write(signatureInDTO).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.studentSignature", is(signatureInDTO.getSignature())));
-    }
-
-    @Test
-    void testStudentContractSignatureNotFound() throws Exception {
-        when(studentService.addSignatureToContract(any())).thenThrow(new NonExistentEntityException());
-
-        mockMvc.perform(put("/studentSignatureContract")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonSignatureDTO.write(signatureInDTO).getJson()))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testStudentContractSignatureConflict() throws Exception {
-        when(studentService.addSignatureToContract(any())).thenThrow(new InvalidOwnershipException());
-
-        mockMvc.perform(put("/studentSignatureContract")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonSignatureDTO.write(signatureInDTO).getJson()))
-                .andExpect(status().isConflict());
-    }
-
-    @Test
-    void testStudentContractSignatureInvalidToken() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/studentSignatureContract")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonSignatureDTO.write(signatureInDTO).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    void testGetApplicationsForOfferHappyDay() throws Exception {
-
-        when(companyService.getStudentsForOffer(anyLong())).thenReturn(offerApplicationDTO);
-        mockMvc.perform(put("/offer/{id}/applications", 1)
+        mockMvc.perform(put("/contractsToCreate")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonTokenDTO.write(token).getJson()))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.applicants.length()", is(3)));
+                .andExpect(jsonPath("$.applications.size()", is(1)));
     }
 
     @Test
-    void testGetApplicationsForOfferNotFound() throws Exception {
+    void testGetUnvalidatedAcceptationsInvalidToken() throws Exception {
+        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
 
-        when(companyService.getStudentsForOffer(anyLong())).thenThrow(new NonExistentOfferExeption());
-        mockMvc.perform(put("/offer/{id}/applications", 1)
+        mockMvc.perform(put("/contractsToCreate")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isForbidden());
+    }
+
+    @Test
+    void testGetCompanyContractsHappyDay() throws Exception {
+        when(companyService.getContracts(anyLong(), anyString())).thenReturn(contractsDTO);
+
+        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(jsonTokenDTO.write(token).getJson()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.size()", is(1)));
+    }
+
+    @Test
+    void testGetCompanyContractsNotFound() throws Exception {
+        when(companyService.getContracts(anyLong(), anyString())).thenThrow(new NonExistentEntityException());
+
+        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonTokenDTO.write(token).getJson()))
                 .andExpect(status().isNotFound());
     }
 
     @Test
-    void testGetApplicationsForOfferForbidden() throws Exception {
-
+    void testGetCompanyContractsTokenInvalid() throws Exception {
         when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-        mockMvc.perform(put("/offer/{id}/applications", 1)
+
+        mockMvc.perform(put("/companyContracts/{companyId}_{session}", 1, Offre.currentSession())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(jsonTokenDTO.write(token).getJson()))
                 .andExpect(status().isForbidden());
     }
-
-    @Test
-    void testGetStatusValidationCVHappyDay() throws Exception {
-
-        when(studentService.getStudentCvStatus(anyLong())).thenReturn(cvStatusDTO);
-        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.status", is("ACCEPTED")));
-    }
-
-    @Test
-    void testGetStatusValidationCVForbidden() throws Exception {
-
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void testGetStatusValidationCVNotFound() throws Exception {
-
-        when(studentService.getStudentCvStatus(anyLong())).thenThrow(new NonExistentEntityException());
-        mockMvc.perform(put("/getStatutValidationCV/{id}", 1)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testGetCompanyOffersHappyDay() throws Exception {
-
-        when(companyService.getValidatedOffers(anyLong())).thenReturn(List.of(duffOffre));
-        mockMvc.perform(put("/company/validatedOffers/{id}", 1)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()", is(1)));
-    }
-
-    @Test
-    void testGetCompanyOffersForbidden() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-        mockMvc.perform(put("/company/validatedOffers/{id}", 1)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
-    @Test
-    void testGetStudentCvToValidateCompanyHappyDay() throws Exception {
-        when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        PdfOutDTO cv = new PdfOutDTO(1L, "[96,17,69]");
-        when(companyService.getStudentCv(anyLong())).thenReturn(cv);
-
-        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(jsonPath("$.pdf", is("[96,17,69]")))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void testGetStudentCvToValidateCompanyNotFound() throws Exception {
-        when(authService.getToken(any(), any())).thenReturn(Token.builder().userId(1).build());
-        doThrow(new NonExistentEntityException()).
-                when(companyService).getStudentCv(anyLong());
-
-        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testGetStudentCvToValidateCompanyInvalidToken() throws Exception {
-        when(authService.getToken(any(), any())).thenThrow(new InvalidTokenException());
-
-        mockMvc.perform(put("/company/studentCv/{studentId}", 1L)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonTokenDTO.write(token).getJson()))
-                .andExpect(status().isForbidden());
-    }
-
 }
